--- a/app/src/main/res/layout/item_userslist.xml
+++ b/app/src/main/res/layout/item_userslist.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    android:layout_margin="5dip">
+    android:layout_margin="@dimen/item_to_left_right_margin">
 
     <LinearLayout
         style="@style/Widget.CardContent"
