eventadapter--> change the typeface

--- a/app/src/main/res/layout/item_eventlist.xml
+++ b/app/src/main/res/layout/item_eventlist.xml
@@ -46,12 +46,10 @@
 
         </LinearLayout>
 
-        <TextView
+        <ImageView
             android:id="@+id/eventType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/ListIcon"
-            android:text="@string/icon_star"
+            android:layout_width="25dip"
+            android:layout_height="25dip"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             />
