--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -181,6 +181,7 @@
 
 
             <RelativeLayout
+                android:layout_marginTop="10dip"
                 android:layout_width="match_parent"
                 android:layout_height="50dip">
                 <TextView
@@ -210,6 +211,25 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 android:layout_marginBottom="@dimen/card_margin">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
+
+                    <include
+                        android:id="@+id/repo_preivew_one"
+                        layout="@layout/include_repo_preview"/>
+
+                    <include
+                        android:id="@+id/repo_preivew_two"
+                        layout="@layout/include_repo_preview"/>
+
+                    <include
+                        android:id="@+id/repo_preivew_three"
+                        layout="@layout/include_repo_preview"/>
+
+                </LinearLayout>
 
 
             </android.support.v7.widget.CardView>
