--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -105,6 +105,7 @@
                     android:layout_width="0dip"
                     android:layout_height="@dimen/three_userlabel_height"
                     android:foreground="?android:attr/selectableItemBackground"
+                    style="@style/CardView"
                     android:layout_weight="1">
 
                     <com.quinn.githubknife.ui.widget.UserLabel
@@ -145,6 +146,9 @@
                             android:textAppearance="@style/TextAppearance.AppCompat.Title"
                             />
 
+
+
+
                     </RelativeLayout>
 
                     
@@ -180,42 +184,56 @@
             </android.support.v7.widget.CardView>
 
 
-            <RelativeLayout
-                android:layout_marginTop="10dip"
-                android:layout_width="match_parent"
-                android:layout_height="50dip">
-                <TextView
-                    android:id="@+id/repository"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dip"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:text="Repository"
-                    />
-
-            </RelativeLayout>
-
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dip"
-                android:background="@color/theme_color"
-                />
 
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:foreground="?android:attr/selectableItemBackground"
-                android:layout_marginBottom="@dimen/card_margin">
+                android:layout_marginTop="@dimen/card_margin">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     >
+
+                    <RelativeLayout
+                        android:id="@+id/repo_preview_title"
+                        android:layout_marginTop="10dip"
+                        android:layout_width="match_parent"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:layout_height="50dip">
+                        <TextView
+                            android:id="@+id/repository"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="10dip"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                            android:text="Repository"
+                            />
+
+                        <TextView
+                            android:id="@+id/repoCount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="10dip"
+                            android:textColor="@color/color_accent"
+                            android:textSize="@dimen/item_content_textsize"
+                            />
+
+                    </RelativeLayout>
+
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dip"
+                        android:background="@color/theme_color"
+                        />
 
                     <include
                         android:id="@+id/repo_preivew_one"
@@ -227,6 +245,65 @@
 
                     <include
                         android:id="@+id/repo_preivew_three"
+                        layout="@layout/include_repo_preview"/>
+
+                </LinearLayout>
+
+
+            </android.support.v7.widget.CardView>
+
+
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:layout_marginTop="@dimen/card_margin">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
+
+                    <RelativeLayout
+                        android:id="@+id/event_preview_title"
+                        android:layout_marginTop="10dip"
+                        android:layout_width="match_parent"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:layout_height="50dip">
+                        <TextView
+                            android:id="@+id/Event"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="10dip"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                            android:text="Event"
+                            />
+
+
+
+                    </RelativeLayout>
+
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dip"
+                        android:background="@color/theme_color"
+                        />
+
+                    <include
+                        android:id="@+id/event_preivew_one"
+                        layout="@layout/include_repo_preview"/>
+
+                    <include
+                        android:id="@+id/event_preivew_two"
+                        layout="@layout/include_repo_preview"/>
+
+                    <include
+                        android:id="@+id/event_preivew_three"
                         layout="@layout/include_repo_preview"/>
 
                 </LinearLayout>
