--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -78,7 +78,7 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         userlabel:name="Starred"
-                        userlabel:value="00" />
+                        userlabel:value=" " />
 
                 </android.support.v7.widget.CardView>
 
@@ -96,7 +96,7 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         userlabel:name="Followers"
-                        userlabel:value="00" />
+                        userlabel:value=" " />
 
                 </android.support.v7.widget.CardView>
 
@@ -114,7 +114,7 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         userlabel:name="Followings"
-                        userlabel:value="00" />
+                        userlabel:value=" " />
 
 
                 </android.support.v7.widget.CardView>
@@ -258,7 +258,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:foreground="?android:attr/selectableItemBackground"
-                android:layout_marginTop="@dimen/card_margin">
+                android:layout_marginTop="@dimen/card_margin"
+                android:visibility="gone"
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
