--- a/app/src/main/res/layout/include_img_key_value.xml
+++ b/app/src/main/res/layout/include_img_key_value.xml
@@ -16,7 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/textIcon"
-        android:text="Join"
+        android:text=""
+        android:layout_marginRight="5dip"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textSize="@dimen/item_content_textsize" />
 
@@ -25,6 +26,7 @@
         android:id="@+id/textValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dip"
         android:layout_alignParentRight="true"
         android:text=""
         android:textColor="@color/color_accent"
